# capsaicin

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake
src/: CMakeLists.txt  main.cpp
src/calc2/: CMakeLists.txt
src/calc2/include/: buffer.h  calc2.h  command_allocator.h  command_buffer.h  common.h  device.h  fence.h  image.h  program.h
src/calc2/src/: calc2.cpp
src/calc2/src/dx12/: buffer_dx12.cpp  buffer_dx12.h  command_allocator_dx12.cpp  command_allocator_dx12.h  command_batch_dx12.cpp  command_batch_dx12.h  command_buffer_dx12.cpp  command_buffer_dx12.h  common_dx12.h  device_dx12.cpp  device_dx12.h  dx12.cpp  dx12.h  fence_dx12.cpp  fence_dx12.h  format_conversion.h  image_dx12.cpp  image_dx12.h  program_dx12.cpp  program_dx12.h  shader_compiler.cpp  shader_compiler.h
src/calc2/tests/: CMakeLists.txt  main.cpp  nBodyGravityCS.hlsl  tests.h
src/core/: CMakeLists.txt  main.cpp
src/core/include/: capsaicin.h
src/core/shaders/: aabb.h  camera.h  color_space.h  combine_illumination.hlsl  data_payload.h  eaw_blur.hlsl  eaw_edge_stopping.h  lighting.h  math_functions.h  primary.hlsl  rt_direct_lighting.hlsl  rt_indirect.hlsl  rt_primary_visibility.hlsl  sampling.h  scene.h  shading.h  simple.hlsl  spatial_gather.hlsl  temporal_accumulation.hlsl  utils.h  visibility copy.hlsl  visibility.hlsl  voxel_visualize.hlsl
src/core/src/: capsaicin.cpp  common.h  main.cpp
src/core/src/dx12/: common.h  d3dx12.h  dx12.cpp  dx12.h  shader_compiler.cpp  shader_compiler.h
src/core/src/systems/: asset_load_system.cpp  asset_load_system.h  blas_system.cpp  blas_system.h  camera_system.cpp  camera_system.h  composite_system.cpp  composite_system.h  gui_system.cpp  gui_system.h  input_system.cpp  input_system.h  raytracing_system.cpp  raytracing_system.h  render_system.cpp  render_system.h  texture_system.cpp  texture_system.h  tlas_system.cpp  tlas_system.h  voxel_system.cpp  voxel_system.h  voxel_visualizer_system.cpp  voxel_visualizer_system.h
src/core/src/utils/: singleton.h  tri_box_test.h  vector_math.h  voxel.h
src/viewer/: CMakeLists.txt  main.cpp
